# banner

./: APKBUILD  CMakeLists.txt  README.md  create_archive.sh
resources/: banner.desktop
source/: ScreenSaver.cpp  ScreenSaver.h  main.cpp
ui/: Animation.qml  Configuration.qml  DisplayTextModel.qml  Ghost.qml  Marquee.qml  main.qml  qml.qrc
